--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link
+	rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Londrina+Sketch&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./css/style.css">
 	<script defer src="./js/app.js"></script>
+	<script defer src="./js/confetti.js"></script>
 	<title>Tic Tac Toe</title>
 </head>
 <body>
