fix scoreboard ties bug

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
 		<div class="sqr" id="sq7"></div>
 		<div class="sqr" id="sq8"></div>
 	</section>
-	<button id="reset">reset</button>    
+	<div id="buttons">	
+		<button id="reset">Reset Board</button>
+		<button id="resetscoreboard">Reset Score</button>
+	</div>
+		<div class="scoreboard">
+		<div id="x">X: 0</div>
+		<div id="o">O: 0</div>
+		<div id="ties">Ties: 0</div>
+	</div>    
 </body>
 </html>
